--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,14 +34,16 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #00c9c9,
-  secondary:  #32db64,
+  primary:    #04b4ae,
+  secondary:  #677077,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #001a1a
+  dark:       #2A2C43
 );
 
-
+// set the background color for header
+$toolbar-background: color($colors, primary);
+//$tabs-background: color($colors, primary);
 
 // App iOS Variables
 // --------------------------------------------------
