--- a/src/app/app.html
+++ b/src/app/app.html
@@ -11,6 +11,7 @@
   <ion-content>
     <ion-list>
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+        <ion-icon [name]="p.icon" item-left [color]="isActive(p)"></ion-icon>
         {{p.title}}
       </button>
     </ion-list>
