--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -1,13 +1,23 @@
 <ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
+  <div *ngIf="edit;else other">
+    <ion-navbar #other>
+      <ion-title>
+        {{pageTitle}}
+      </ion-title>
+    </ion-navbar>
+  </div>
+  <ng-template #other>
+    <ion-navbar>
+      <button ion-button menuToggle>
       <span class="button-inner">
        <ion-icon name="menu" role="img" class="icon icon-ios ion-ios-menu" aria-label="menu"></ion-icon>
       </span>
-      <div class="button-effect"></div>
-    </button>
-    <ion-title>
-      {{pageTitle}}
-    </ion-title>
-  </ion-navbar>
+        <div class="button-effect"></div>
+      </button>
+      <ion-title>
+        {{pageTitle}}
+      </ion-title>
+    </ion-navbar>
+  </ng-template>
+
 </ion-header>
