--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -33,9 +33,17 @@ ion-header{
   .loginBtn, .registerBtn, .changePassBtn{
      margin-left: 15px;
   }
-  .registerBtn, .changePassBtn{
-    button, a{
-      width: 48.3%;
+  .registerBtn{
+    button, a {
+      width: 47.5%;
+    }
+  }
+  .changePassBtn {
+    button {
+      width: 53%;
+    }
+    a{
+      width: 42.5%;
     }
   }
   ion-item{
@@ -50,15 +58,19 @@ ion-header{
   }
   a.forgot{
     color: color($colors, dark);
-    margin: 0 33%;
+    margin: 0 30%;
   }
   a.register{
     color: color($colors, dark);
-    margin: 0 29%;
+    margin: 0 23%;
   }
 }
 
 .item-input .label-md, .item-datetime .label-md{
     color: white;
   }
+.scroll-content{
+  overflow-x: unset;
+  overflow-y: unset;
+}
 
