login and forgot password page validation is done

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -67,6 +67,11 @@ ion-header{
     color: color($colors, dark);
     margin: 0 23%;
   }
+  .danger{
+    color: red;
+    padding-left: 5%;
+
+  }
 }
 
 #profile, #editProfile{
