--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -1,13 +1,7 @@
 page-register {
   .scroll-content{
     overflow-x: unset;
-    overflow-y: unset;
-  }
-
-  .danger{
-    color: red;
-    padding-left: 5%;
-
+    overflow-y: auto;
   }
 
 }
