--- a/src/pages/tabs/tabs.scss
+++ b/src/pages/tabs/tabs.scss
@@ -1,5 +1,6 @@
 page-tabs {
-      a#tab-t0-0, a#tab-t0-1, a#tab-t0-2, a#tab-t0-3 {
+      a#tab-t0-0, a#tab-t0-1, a#tab-t0-2, a#tab-t0-3,
+      a#tab-t1-0, a#tab-t1-1, a#tab-t1-2, a#tab-t1-3 {
         display: none;
       }
 }
