--- a/src/pages/chat/chat.scss
+++ b/src/pages/chat/chat.scss
@@ -1,11 +1,41 @@
 page-chat {
-  ion-footer{
-    ion-input, button{
-      display: inline-block;
-    }
-    ion-input{
-      padding-left: 10px;
-      width: 83.9%;
-    }
+  ion-select{
+    max-width: 70% !important;
   }
+  .innerMessage{
+    display: inline-block;
+    padding: 5px 10px;
+    background: color($colors, 'primary');
+    margin: 5px;
+    color: white;
+    border-radius: 3px;
+  }
+
+  .innerMessage.messageLeft{
+    background: #04b456;
+  }
+
+  .username{
+    font-weight: bold;
+    font-size: 80%;
+  }
+
+  .message{
+    font-size: 120%;
+  }
+
+  .message:after{
+    content: '';
+    display: block;
+    clear: both;
+  }
+
+  .messageLeft{
+    float:left;
+  }
+
+  .messageRight{
+    float:right;
+  }
+
 }
