--- a/src/pages/fa-qs/fa-qs.scss
+++ b/src/pages/fa-qs/fa-qs.scss
@@ -1,3 +1,37 @@
 page-fa-qs {
+  .innerMessage{
+    display: inline-block;
+    padding: 5px 10px;
+    background: color($colors, 'primary');
+    margin: 5px;
+    color: white;
+    border-radius: 3px;
+  }
 
+  .innerMessage.messageLeft{
+    background: #04b456;
+  }
+
+  .username{
+    font-weight: bold;
+    font-size: 80%;
+  }
+
+  .message{
+    font-size: 120%;
+  }
+
+  .message:after{
+    content: '';
+    display: block;
+    clear: both;
+  }
+
+  .messageLeft{
+    float:left;
+  }
+
+  .messageRight{
+    float:right;
+  }
 }
