--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,12 @@
 page-home {
   ion-fab { position: absolute; bottom: 30px; right: 50px; }
+  ion-slide{
+    background-color: #00847f;
+    color: #fff;
+    font-size: 2em;
+    font-family: sans-serif;
+  }
+  ion-slides{
+    height: 220px;
+  }
 }
