session problem fixed

--- a/src/pages/forgot-password/forgot-password.scss
+++ b/src/pages/forgot-password/forgot-password.scss
@@ -3,6 +3,9 @@ page-forgot-password {
     overflow-x: unset;
     overflow-y: unset;
   }
+  ion-img{
+    background: color($colors, primary);
+  }
 
 }
 
