--- a/src/pages/default-greeting/default-greeting.scss
+++ b/src/pages/default-greeting/default-greeting.scss
@@ -1,6 +1,6 @@
 page-default-greeting {
-  .scroll-content{
-    overflow-x: auto;
-    overflow-y: auto;
-  }
+  //.scroll-content{
+  //  overflow-x: auto;
+  //  overflow-y: auto;
+  //}
 }
