--- a/src/pages/event/event.scss
+++ b/src/pages/event/event.scss
@@ -1,6 +1,6 @@
 page-event {
-  .scroll-content{
-    overflow-x: unset;
-    overflow-y: auto;
-  }
+  //.scroll-content{
+  //  overflow-x: unset;
+  //  overflow-y: auto;
+  //}
 }
