--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,8 +1,8 @@
 page-login {
-  .scroll-content{
-    overflow-x: unset;
-    overflow-y: unset;
-  }
+  //.scroll-content{
+  //  overflow-x: unset;
+  //  overflow-y: unset;
+  //}
   ion-img{
     background: color($colors, primary);
   }
