--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -1,8 +1,8 @@
 page-register {
-  .scroll-content{
-    overflow-x: unset;
-    overflow-y: auto;
-  }
+  //.scroll-content{
+  //  overflow-x: unset;
+  //  overflow-y: auto;
+  //}
   ion-img{
     background: color($colors, primary);
   }
