--- a/src/pages/chat/chat.scss
+++ b/src/pages/chat/chat.scss
@@ -12,7 +12,8 @@ page-chat {
   }
 
   .innerMessage.messageLeft{
-    background: #04b456;
+    background: color($colors, light);
+    color: color($colors, 'primary') ;
   }
 
   .username{
