--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,8 +1,8 @@
 page-home {
   ion-fab { position: absolute; bottom: 30px; right: 50px; }
   ion-slide{
-    background-color: #00847f;
-    color: #fff;
+    background-color: color($colors, light);
+    color: color($colors, primary);
     font-size: 2em;
     font-family: sans-serif;
   }
